--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ flask-cors==4.0.0
 flask-socketio==5.5.1
 python-dotenv==1.0.0
 requests==2.32.3
+redis==5.0.1
 python-socketio==5.12.0
 gunicorn==23.0.0
 Werkzeug==3.1.3
